add: update user

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 NotNull.userRequest.firstName=First name is required
 NotNull.userRequest.lastName=Last name is required
+NotNull.userRequest.email=Email is required
 NotNull.userRequest.birthday=Birthday date is required
+
+Email.invalid=Email is not valid
+Phone.invalid=Phone is not valid
